update links and download link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    <a class="nav-link" href="https://download.iconicclient.tk/">Downloads</a>
+                    <a class="nav-link" href="/">Downloads</a>
                     <a class="nav-link" href="/about">About</a>
                     <a class="nav-link" href="/faq">FAQ</a>
                 </div>
@@ -53,7 +53,7 @@
     </div>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
         <i class="bi bi-exclamation-square-fill"></i>
-        <strong>We are still in beta</strong> More info in our <a href="https://discord.gg/2gDAqshqF3">Discord
+        <strong>We are still in beta</strong> More info in our <a href="https://discord.gg/R8FqSyZvj7">Discord
             Server.</a>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
@@ -63,7 +63,7 @@
             <h1 style="font-family: 'Titillium Web', sans-serif;"><strong>Iconic Client</strong></h1>
             <p class="lead">The Iconic way to play Minecraft.</p>
             <a class="btn btn-success" role="button" type="button" data-bs-toggle="tooltip" data-bs-placement="top"
-                title="Caution: Currently in beta" href="https://download.iconicclient.tk/"><i class="bi bi-download"></i> Download</a>
+                title="Soon..." href=""><i class="bi bi-download"></i> Soon...</a>
         </div>
 
     </div>
@@ -72,7 +72,7 @@
             <p class="text-muted m-0">©️ Iconic Client LLC. All Rights Reserved.</p>
         </div>
         <div>
-            <a href="https://discord.gg/Nh87fbBSU8"><i class="bi bi-discord text-light lead"></i></a>
+            <a href="https://discord.gg/R8FqSyZvj7"><i class="bi bi-discord text-light lead"></i></a>
             <a href="mailto:contact@iconicclient.tk"><i class="bi bi-envelope-fill text-light lead"></i></a>
         </div>
     </footer>
