--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="alert alert-warning alert-dismissible fade show" role="alert">
         <i class="bi bi-exclamation-square-fill"></i>
-        <strong>We are still in beta</strong> More info in our <a href="https://discord.gg/R8FqSyZvj7">Discord
+        <strong>We haven't released yet</strong> More info in our <a href="https://discord.gg/R8FqSyZvj7">Discord
             Server.</a>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
