--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="/">Home</a>
-                    <a class="nav-link" href="/">Downloads</a>
+                    <a class="nav-link" href="https://download.iconicclient.tk/">Downloads</a>
                     <a class="nav-link active" aria-current="page" href="/about">About</a>
                     <a class="nav-link" href="/faq">FAQ</a>
                 </div>
@@ -62,7 +62,7 @@
             <p class="text-muted m-0">©️ Iconic Client LLC. All Rights Reserved.</p>
         </div>
         <div>
-            <a href="https://discord.gg/R8FqSyZvj7"><i class="bi bi-discord text-light lead"></i></a>
+            <a href="https://discord.gg/Nh87fbBSU8"><i class="bi bi-discord text-light lead"></i></a>
             <a href="mailto:contact@iconicclient.tk"><i class="bi bi-envelope-fill text-light lead"></i></a>
         </div>
     </footer>
