--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <h1 style="font-family: 'Titillium Web', sans-serif;"><strong>Iconic Client</strong></h1>
             <p class="lead">The Iconic way to play Minecraft.</p>
             <a class="btn btn-success" role="button" type="button" data-bs-toggle="tooltip" data-bs-placement="top"
-                title="Caution: Currently in beta" href="https://download.iconicclient.tk/"><i class="bi bi-download"></i> Download</a>
+                title="Caution: Currently have not released." href="https://download.iconicclient.tk/"><i class="bi bi-download"></i> Download</a>
         </div>
 
     </div>
